--- a/index.css
+++ b/index.css
@@ -10,11 +10,11 @@ body {
     background-image: url('manager.gif');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed; /* Optional: Keeps the background fixed */
+    background-attachment: fixed; 
 }
 
 
-/* Style the h1 element */
+/* elegently Style the h1 element */
 h1 {
     background: white;
     background-clip: text;
